* enhancements
  * Improve e-mail regexp (by github.com/rodrigoflores)
  * Add strip_whitespace_keys and default to e-mail (by github.com/swrobel)
  * Do not run format and uniqueness validations on e-mail if it hasn't changed (by github.com/Thibaut)

* bug fix
  * password_required? should not affect length validation
  * User cannot access sign up and similar pages if he is already signed in through a cookie or token
  * Do not convert booleans to strings on finders (by github.com/xavier)

== 1.3.4

* bug fix
  * Do not add formats if html or "*/*"

== 1.3.3

* bug fix
  * Explicitly mark the token as expired if so

== 1.3.2

* bug fix
  * Fix another regression related to reset_password_sent_at (by github.com/alexdreher)

== 1.3.1

* enhancements
  * Improve failure_app responses (by github.com/indirect)
  * sessions/new and registrations/new also respond to xml and json now

* bug fix
  * Fix a regression that occurred if reset_password_sent_at is not present (by github.com/stevehodgkiss)

== 1.3.0

* enhancements
  * All controllers can now handle different mime types than html using Responders (by github.com/sikachu)
  * Added reset_password_within as configuration option to send the token for recovery (by github.com/jdguyot)
  * Bump password length to 128 characters (by github.com/k33l0r)
  * Add :only as option to devise_for (by github.com/timoschilling)
  * Allow to override path after sending password instructions (by github.com/irohiroki)
  * require_no_authentication has its own flash message (by github.com/jackdempsey)

* bug fix
  * Fix a bug where configuration options were being included too late
  * Ensure Devise::TestHelpers can be used to tests Devise internal controllers (by github.com/jwilger)
  * valid_password? should not choke on empty passwords (by github.com/mikel)
  * Calling devise more than once does not include previously added modules anymore
  * downcase_keys before validation

* backward incompatible changes